include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = liblua.la

noinst_HEADERS = lapi.h \
                 lauxlib.h \
                 lcode.h \
                 ldebug.h \
                 ldo.h \
                 lfunc.h \
                 lgc.h \
                 llex.h \
                 llimits.h \
                 lmem.h \
                 lobject.h \
                 lopcodes.h \
                 lparser.h \
                 lstate.h \
                 lstring.h \
                 ltable.h \
                 ltm.h \
                 lua.h \
                 lualib.h \
                 lundump.h \
                 lvm.h \
                 lzio.h

liblua_la_SOURCES = lapi.c \
                    lauxlib.c \
                    lbaselib.c \
                    lcode.c \
                    ldblib.c \
                    ldebug.c \
                    ldo.c \
                    ldump.c \
                    lfunc.c \
                    lgc.c \
                    liolib.c \
                    llex.c \
                    lmathlib.c \
                    lmem.c \
                    loadlib.c \
                    lobject.c \
                    lopcodes.c \
                    lparser.c \
                    lstate.c \
                    lstring.c \
                    lstrlib.c \
                    ltable.c \
                    ltablib.c \
                    ltests.c \
                    ltm.c \
                    lundump.c \
                    lvm.c \
                    lzio.c

